1999-05-11  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (MACROS): Add `gnome-bonobo-check.m4'.

1999-05-09  Jacob Berkman  <jberk+@cmu.edu>

	* gnome-bonobo-check.m4: made test program return 0,
	changed BONOBO_CHECK to not return "failure" on success

1999-04-16  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-print-check.m4 (GNOME_PRINT_CHECK): Fix invocation of
	AM_PATH_GNOME_PRINT. 
	* Makefile.am (MACROS): Sort lines.

Sun Mar 28 23:39:48 1999  Norbert Warmuth  <nwarmuth@privat.circular.de>

	* gnome-vfs.m4: Add --with-vfs option. GNOME_VFS_LIBS still needs
	to be fixed but that's not a problem because there's no libvfs, yet.

1999-03-10  Tomislav Vujec  <tvujec@carnet.hr>

	* aclocal-include.m4 (AM_ACLOCAL_INCLUDE): Add ACLOCAL_FLAGS in
	ACLOCAL. This allows maintainer rules to work if any of the macros
	change.

1999-03-10  Tomislav Vujec  <tvujec@carnet.hr>

	* gnome.m4 (GNOME_INIT_HOOK): Wrapped position parameter in
	testing for additional inits. It gets expanded while generating
	configure, resulting in an empty parameter list - syntax error in
	for statement.

1999-03-09  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome.m4 (GNOME_INIT): Add a new paramater, which is passed to
	GNOME_INIT_HOOK. 
	(GNOME_INIT_HOOK): New parameter "additional inits".  This is a
	list like "applets capplet", and the corresponding
	GNOME_APPLETS_LIBS and GNOME_CAPPLETS_LIBS are defined.

1998-03-01  Mark Crichton <crichton@gimp.org>

	* gnome-objc-checks : Added HAVE_GNOME_OBJC conditional

1998-02-27  Gregory McLean <gregm@comstar.net>

	* gnome-x-checks.m4 : Require at least gtk+ 1.2 (pointless getting
	bug reports with an old glib/gtk/gdk set..)

1999-02-25  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-checks.m4: Require LibGTop >= 1.0.0.

1999-02-22  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* compiler-flags.m4: Only add the compilation warnings if the
	compiler is GCC.

1999-02-20  Timur Bakeyev <mc@bat.ru>
